# Opt_SantaSleighPacking

./: .gitignore  CMakeLists.txt
Check/: Check.1  main.cpp
SantaSleighPacking/: BaseLayer.h  Gr.h  Help.h  MaxRectPacking.h  Packing.h  SantaSleighPacking.1  Shelf.h  TabuSearchMaxRectPacking.h  TailLayer.h  main.cpp  results.txt
SantaSleighPacking.xcodeproj/: project.pbxproj
SantaSleighPacking.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SantaSleighPacking.xcodeproj/project.xcworkspace/xcuserdata/antoshkaplus.xcuserdatad/: UserInterfaceState.xcuserstate
SantaSleighPacking.xcodeproj/xcuserdata/antoshkaplus.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
SantaSleighPacking.xcodeproj/xcuserdata/antoshkaplus.xcuserdatad/xcschemes/: Check.xcscheme  CheckRelease.xcscheme  Release.xcscheme  SantaSleighPacking.xcscheme  xcschememanagement.plist
Scripts/: handle_layer.py  layers.py  plot.py  plot_between_layer.py  plot_stats.py  rects.py
app/: main.cpp  main_check.cpp
docs/: ideas.txt  results.txt
include/: BaseLayer.h  Help.h  MaxRectPacking.h  Packing.h  TailLayer.h
scripts/: run.py
src/: Help.cpp  MaxRectPacking.cpp
